--- a/microjuego.html
+++ b/microjuego.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kurapika~Home</title>
-	
+		<title>Kurapika~MiniJogo</title>
+		
 		<link rel="stylesheet" href="estilo.css" />
 	</head>
 	<body>
 		<header>
-		<h1>Kurapika</h1>
+		<h1>Minijogo</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -16,21 +16,13 @@
 					<li><a href="contact.html">Contacto</a></li>
 				</ul>
 			</nav>
-				
+			
 		</header>
-		
 		<main>
-		<p><img src="guts-neon-iconic-5120x2880-21415.png"/></p>
-		<section>
-		<h2>Acerca</h2>
-		<p>Estudiante de Ciberseguridad en <a href="https://enti.cat/es/">enti</a> y apasionado en la Ciberseguridad.</p>
-		</section>
-		
+		<form>
+			<p><label for="Tu Numero">Tu número: </label><input type="number" name="id" id="numero" /></p>
+			<p><input type="submit" /></p>
+		</form>
 		</main>
-		
-		<footer>
-		<p> © Kurapika 2025 </p>
-		</footer>
-		
 	</body>
 </html>
