--- a/CV.html
+++ b/CV.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CV</title>
-		<style>
-		ul{
-			list-style:none;
-		}
-		</style>
+		<title>Kurapika~CV</title>
+		
+		<link rel="stylesheet" href="estilo.css" />
 	</head>
 	<body>
 		<header>
+		<h1>Mi CV</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -18,7 +16,7 @@
 					<li><a href="contact.html">Contacto</a></li>
 				</ul>
 			</nav>
-			<h1>Mi CV</h1>
+			
 		</header>
 		
 		<main>
