--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Contacto</title>
+		<title>Kurapika~Contacto</title>
+		
+		<link rel="stylesheet" href="estilo.css" />
 	</head>
 	<body>
 		<header>
+		<h1>Contacto</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -13,9 +16,18 @@
 					<li><a href="contact.html">Contacto</a></li>
 				</ul>
 			</nav>
-			<h1>Contacto</h1>
+			
 		</header>
 		<main>
+		<form>
+			<p><label for="campo-nombre">Nombre: </label><input type="text" name="nombre" id="campo-nombre" /></p>
+			<p><label for="campo-pass">Password: </label><input type="password" name="password" id="campo-pass" /></p>
+			<p><label for="campo-data">Data: </label><input type="date" name="data" id="campo-data" /></p>
+			<p><label for="campo-edad">Edad: </label><input type="number" name="edat" min="1" max="120" id="campo-edad" /></p>
+			<p><label for="campo-color">Color: </label><input type="color" name="color" id="campo-color" /></p>
+			<p><input type="checkbox" name="subscribe" id="campo-sub" /></p><label for="campo-sub">Acepto las condiciones de Privacidad</label>
+			<p><input type="submit" /></p>
+		</form>
 		</main>
 	</body>
 </html>
