--- a/microjuego.html
+++ b/microjuego.html
@@ -14,6 +14,7 @@
 					<li><a href="cv.html">Cv</a></li>
 					<li><a href="hobbies.html">Hobbies</a></li>
 					<li><a href="contact.html">Contacto</a></li>
+					<li><a href="microjuego.html">MiniJogo</a></li>
 				</ul>
 			</nav>
 			
