--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="cv.html">Cv</a></li>
-					<li><a href="hobbies.html">Hobbies</a></li>
+					<li><a href="CV.html">Cv</a></li>
+					<li><a href="Hobbies.html">Hobbies</a></li>
 					<li><a href="contact.html">Contacto</a></li>
 					<li><a href="microjuego.html">MiniJogo</a></li>
 				</ul>
