--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-		<h1>Mi CV</h1>
+		<h1 class="diferenteTitulo">Mi CV</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
