--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-		<h1>Mis Hobbies</h1>
+		<h1 class="diferenteTitulo">Mis Hobbies</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
