--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-		<h1>Contacto</h1>
+		<h1 class="diferenteTitulo">Contacto</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
